# audit-ai-assistant

./: .env.example  .env.local.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/routes/: admin.py  auth.py  chat.py  document.py  health.py  knowledge_base.py
backend/app/core/: config.py  security.py
backend/app/db/: models.py  schema.py  seed.py  session.py
backend/app/schemas/: admin.py  auth.py  chat.py  common.py  document.py  knowledge_base.py
backend/app/services/audit/: audit_logger.py
backend/app/services/chat_context/: __init__.py  summarizer.py  (+2 more)
backend/app/tests/: test_admin_management.py  test_chat_context_management.py  test_chat_conversation_management.py  test_chat_mode_simplification.py  test_chunker.py  test_document_processing_transactions.py  test_document_progress_status.py  test_health.py  test_keyword_indexer.py  test_local_e5_manager.py  test_mineru_parser.py  test_mock_embedding.py  test_model_runtime_config.py  test_office_converter.py  test_parser_fallbacks.py  test_permissions_and_seed.py  test_rag_helpers.py  test_remote_embedding_client.py  test_retrieval_pipeline.py  test_turn_scoped_temp_files.py  test_upload_backgrounding.py
backend/app/workers/: worker.py
backend/migrations/: env.py
backend/migrations/versions/: 20260609_0001_initial.py  20260609_0002_conversation_memories.py  20260609_0003_rag_chunk_metadata.py  20260610_0004_conversation_metadata.py  20260612_0005_document_metadata.py  20260612_0006_keyword_bm25.py
(+63 files in other folders)
