[project]
name = "audit-ai-assistant-backend"
version = "0.1.0"
description = "FastAPI backend for a local audit AI assistant MVP"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.3",
  "celery>=5.4.0",
  "fastapi>=0.115.6",
  "httpx>=0.27.2",
  "jieba>=0.42.1",
  "minio>=7.2.10",
  "openpyxl>=3.1.5",
  "pandas>=2.2.3",
  "psycopg[binary]>=3.2.3",
  "pydantic-settings>=2.6.1",
  "pymupdf>=1.24.13",
  "python-docx>=1.1.2",
  "python-multipart>=0.0.17",
  "qdrant-client>=1.12.1",
  "redis>=5.2.0",
  "SQLAlchemy>=2.0.36",
  "uvicorn[standard]>=0.32.1",
  "xlrd>=2.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.3",
]
mineru = [
  "mineru[all]>=3.0.0",
]
local-models = [
  "sentence-transformers>=3.0.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
